cache-deployment.yaml
## cache-deployment


apiVersion: apps/v1
kind: Deployment
metadata:
    name: cache-deployment
spec:
    replicas: 3
    selector:
      matchLabels:
        app: cache
    template:
      metadata:
        labels:
          app: cache
      spec:
        containers:
          - name: cache-container
            image: redis:latest
            ports:
              - containerPort: 6379
