my-app-deployment.yaml
## my-app-deployment

apiVersion: apps/v1
kind: Deployment
metadata: 
    name: my-app-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: my-app
  template: 
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app-container
          image: nginx:latest
          ports:
            - containerPort: 80


---
## service
---
apiVersion: v1
kind: Service
metadata:
    name: my-app-service
spec:
    selector:
        app: my-app
    ports:
      - protocol: TCP
        port: 80
        targetPort: 80
    type: NodePort
