my-app-network-policy.yaml
# my-app-network-policy

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-app-network-policy
spec:
  podSelector:
    matchLabels:
      app: my-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {} # Allow from any pod within the same namespace
    - podSelector:
        matchLabels:
          app: trusted # Allow from pod with label app=trusted
  egress:
  - to:
    - podSelector: {} # Allow to any pod within the same namespace
